--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Predragbabicjukeb by djape007</title>
+    <title>Dzuboks</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,11 +11,11 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Predragbabicjukeb</h1>
+      <h1 class="project-name">Dzuboks</h1>
       <h2 class="project-tagline"></h2>
-      <a href="https://github.com/djape007/predragBabicJukeB" class="btn">View on GitHub</a>
-      <a href="https://github.com/djape007/predragBabicJukeB/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/djape007/predragBabicJukeB/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://www.kupujemprodajem.com/Dzuboks-sa-Android-aplikacijom-36608339-oglas.htm?filter_id=" class="btn">KupujemProdajem</a>
+      <a href="https://www.kupindo.com/Oprema-i-delovi/34199655_Dzuboks-sa-Android-aplikacijom" class="btn">Kupindo</a>
+      <a href="https://www.google.com" class="btn">Licni sajt</a>
     </section>
 
     <section class="main-content">
