--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Najbolji dzuboks na trzistu</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Dzuboks je potpuno legalan. Osnova je <a href="https://sh.wikipedia.org/wiki/Linux">linux operativni sistem</a> koji je potpuno besplatan, kao i ostali pomocni programi koje koristi. Napravljen je od kvalitetne iverice debljine 18mm. Radi na kovanice od 20 dinara.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Dodavanje i upravljanje muzikom</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Dzuboks je povezan sa online bazom pesama odakle preuzima najnovije pesme. Dodavanje pesama se obavlja <b>jednim klikom</b>. U bazi trenutno imamo ~17500 pesama od ~390 izvodjaca, i svaka pesma se moze pustiti u samo par klikova zahvaljujuci kategorizaciji pesama po zanru i abecednoj kategorizaciji izvodjaca. Dzuboks ima posebne filtere koji se mogu podesiti tako da se na dzuboksu ne nalazi ceo zanr muzike ili samo pojedini izvodjaci. Dodavanje novih pesama u bazu obavljamo mi, Vi samo treba povremeno da sinhronizujete pesme na dzuboksu sa nasom bazom (sto se obavlja jednim klikom). Maksimalan kapacitet dzuboksa je oko <b>450 miliona pesama</b> (nije sala), sto je prakticno neograniceno.</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Android aplikacija</h3>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Uz dzuboks dolazi aplikacija za Android pomocu koje mozete da kontrolisete i nadgledate dzuboks. Aplikacija je potpuno besplatna i ne sadrzi reklame. Aplikacija moze da radi u dva rezima, rezim gosta i rezim admina. Neke od funkcija aplikacije su: updateovanje pesama jednim klikom, dodavanje zetona, gasenje dzuboksa, pustanje sledece pesme,.... Uskoro ce biti dodata mogucnost podesavanja filtera za odabir pesama.</p>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Slike dzuboksa</h3>
+
+<p><img src="http://i.imgur.com/vEe7Sry.jpg" align="left"> <img src="http://i.imgur.com/fwdmiqZ.jpg" align="right"></p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
