--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 <p>Uz dzuboks dolazi aplikacija za Android pomocu koje mozete da kontrolisete i nadgledate dzuboks. Aplikacija je potpuno besplatna i ne sadrzi reklame. Aplikacija moze da radi u dva rezima, rezim gosta i rezim admina. Neke od funkcija aplikacije su: updateovanje pesama jednim klikom, dodavanje zetona, gasenje dzuboksa, pustanje sledece pesme,.... Uskoro ce biti dodata mogucnost podesavanja filtera za odabir pesama.</p>
 
 <h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Email izvestaj</h3>
+
+<p>Dzuboks ima ugradjen sistem koji salje izvestaj o radu emailom. Izvestaj se salje prilikom gasenja dzuboksa. U izvestaju se nalaze podaci o tome koji izvodjaci su pustani i koliko puta, koji zanrovi muzike su pustani i koliko puta, broj ubacenih kovanica, procenjena zarada i koliko je vremena dzuboks bio upaljen.</p>
+
+<h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Slike dzuboksa</h3>
 
 <p><img src="http://i.imgur.com/EdfWL7q.jpg"> <img src="http://i.imgur.com/vEe7Sry.jpg"> <img src="http://i.imgur.com/fwdmiqZ.jpg"> <img src="http://i.imgur.com/yfyRu8Z.jpg"></p>
