--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2 class="project-tagline"></h2>
       <a href="https://www.kupindo.com/Oprema-i-delovi/34199655_Dzuboks-sa-Android-aplikacijom" class="btn">Kupindo</a>
       <a href="https://www.kupujemprodajem.com/Dzuboks-sa-Android-aplikacijom-36608339-oglas.htm?filter_id=" class="btn">KupujemProdajem</a>
-      <a href="https://www.google.com" class="btn">Licni sajt</a>
+      <a href="http://djape007.github.io/dzuboks/licno.html" class="btn">Licni sajt</a>
     </section>
 
     <section class="main-content">
