--- a/licno.html
+++ b/licno.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h3> O meni </h3>
-    <a href="http://djape007.github.io/dzuboks/">Nazad</a>
+    <h3 align="middle">Predrag Babic</h3>
+    <img src="https://s-media-cache-ak0.pinimg.com/236x/14/c2/af/14c2af8efbbd446efbb3b10cce595b43.jpg" align="middle">
+    <h4 align="middle"><a href="http://djape007.github.io/dzuboks/">Nazad</a></h4>
   </body>
 </html>
