--- a/licno.html
+++ b/licno.html
@@ -2,7 +2,8 @@
 <html>
   <body>
     <h3 align="middle">Predrag Babic</h3>
-    <img src="https://s-media-cache-ak0.pinimg.com/236x/14/c2/af/14c2af8efbbd446efbb3b10cce595b43.jpg" align="middle">
+    <img src="https://s-media-cache-ak0.pinimg.com/236x/14/c2/af/14c2af8efbbd446efbb3b10cce595b43.jpg" align="center">
+    <h5>Jbg nisam zavrsio ovu stranicu</h5>
     <h4 align="middle"><a href="http://djape007.github.io/dzuboks/">Nazad</a></h4>
   </body>
 </html>
