--- a/licno.html
+++ b/licno.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <h3 align="middle">Predrag Babic</h3>
-    <img src="https://s-media-cache-ak0.pinimg.com/236x/14/c2/af/14c2af8efbbd446efbb3b10cce595b43.jpg" align="center">
+    <img src="http://66.media.tumblr.com/0e95d83d30741b1d5eede33077a20e72/tumblr_nmqp0j1xKL1titub2o1_500.png" align="absmiddle">
     <h5>Jbg nisam zavrsio ovu stranicu</h5>
     <h4 align="middle"><a href="http://djape007.github.io/dzuboks/">Nazad</a></h4>
   </body>
