--- a/licno.html
+++ b/licno.html
@@ -2,8 +2,8 @@
 <html>
   <body>
     <h3 align="middle">Predrag Babic</h3>
-    <img src="http://66.media.tumblr.com/0e95d83d30741b1d5eede33077a20e72/tumblr_nmqp0j1xKL1titub2o1_500.png" align="absmiddle">
-    <h5>Jbg nisam zavrsio ovu stranicu</h5>
+    <center><img src="http://66.media.tumblr.com/0e95d83d30741b1d5eede33077a20e72/tumblr_nmqp0j1xKL1titub2o1_500.png"></center>
+    <h5 align="middle">Jbg nisam zavrsio ovu stranicu</h5>
     <h4 align="middle"><a href="http://djape007.github.io/dzuboks/">Nazad</a></h4>
   </body>
 </html>
